gtk/thunar: Avoid double borders on sidebar
Thunar hardcodes ".shortcuts-pane { border-top-style: solid; }", so
use border-width instead of border-style.

--- a/src/gtk/sass/apps/_xfce.scss
+++ b/src/gtk/sass/apps/_xfce.scss
@@ -174,7 +174,7 @@ XfdesktopIconView.view {
 
   .shortcuts-pane.frame,
   .standard-view.frame {
-    border-style: none;
+    border-width: 0;
   }
 
   .sidebar .view:not(:selected) {
